<resources>
    <string name="app_name" translatable="false">BenzinApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">History</string>
    <string name="title_notifications">Settings</string>
    <string name="title_add_record">Add Record</string>
    <string name="edit_text_liters_hint">Liters</string>
    <string name="edit_text_cost_hint">Cost in €</string>
    <string name="text_view_cost">Cost in €:</string>
    <string name="text_view_liters">Liters:</string>
    <string name="button_add_trip">ADD TRIP</string>
    <string name="error_field_cannot_be_empty">This field cannot be empty.</string>
    <string name="edit_text_kilometers_hint">Mileage in km</string>
    <string name="text_view_kilometers">Kilometers:</string>
    <string name="edit_text_petrol_type_hint">Fuel Type (e.g. \'95 oct.\')</string>
    <string name="text_view_petrol_type">Petrol Type:</string>
    <string name="text_view_datetime">Date:</string>
    <string name="edit_text_datetime_hint">Tap to select date...</string>
    <string name="text_view_click_cards_message">Click on a card to see more info.</string>
    <string name="dialog_delete_title">RECORD DELETION</string>
    <string name="dialog_delete_confirmation">Are you sure you want to delete this record?</string>
    <string name="dialog_yes">YES</string>
    <string name="dialog_no">NO</string>
    <string name="toast_record_deleted">Record deleted successfully.</string>
    <string name="text_view_click_cards_message_empty">Nothing to show here. Click the button to add records.</string>
    <string name="toast_record_added">Successfully added record.</string>
    <string name="dialog_exit_confirmation_title">CONFIRM EXIT</string>
    <string name="dialog_exit_confirmation_message">There is at least one field that has data in it. If you leave without adding a record, this data will be deleted. Are you sure you want to leave?</string>
    <string name="title_display_data">Record Data</string>
    <string name="text_view_liters_per_100_km">Liters per 100km:</string>
    <string name="text_view_km_per_liter">Kilometers per Liter:</string>
    <string name="text_view_cost_per_km">Cost per Kilometer:</string>
    <string name="edit_text_station_hint">Station (e.g. \'bp\')</string>
    <string name="text_view_station">Petrol Station:</string>
    <string name="edit_text_notes_hint">Notes</string>
    <string name="text_view_notes">Notes:</string>
    <string name="text_view_register">Don\'t have an account? Register now.</string>
    <string name="text_view_login">Already have an account? Log in.</string>
    <string name="text_view_username">Username</string>
    <string name="text_view_username_hint">Enter Username...</string>
    <string name="text_view_password">Password</string>
    <string name="text_view_password_hint">Enter Password...</string>
    <string name="button_login">LOGIN</string>
    <string name="text_view_login_to_benzinapp">Login to BenzinApp</string>
    <string name="error_password_confirmation_wrong">Passwords don\'t match.</string>
    <string name="text_view_average_consumption">AVERAGE CONSUMPTION</string>
    <string name="button_apply_edits">APPLY EDITS</string>
    <string name="title_edit_record">Edit Record</string>
    <string name="toast_record_edited">Record Successfully Edited.</string>
    <string name="text_view_register_to_benzinapp">Register to BenzinApp</string>
    <string name="text_view_confirm_password">Confirm Password</string>
    <string name="text_view_confirm_password_hint">Re-enter your password...</string>
    <string name="text_view_car_year">Car Year</string>
    <string name="text_view_car_year_hint">Enter Car Year...</string>
    <string name="text_view_car_model">Car Model</string>
    <string name="text_view_car_model_hint">Enter Car Model...</string>
    <string name="text_view_car_manufacturer">Car Manufacturer</string>
    <string name="text_view_car_manufacturer_hint">Enter Car Manufacturer...</string>
    <string name="error_cars_didnt_exist">Cars didn\'t exist back then.</string>
    <string name="button_register">REGISTER</string>
    <string name="graph_view_liters_per_100_km">lt./100km depend on time</string>
    <string name="graph_view_km_per_lt">km/lt depend on time</string>
    <string name="graph_view_cost_per_km">cost/km depend on time</string>
    <string name="text_view_no_data">Insufficient Data!</string>
    <string name="title_repeated_trips">Trips</string>
    <string name="title_services">Maintenance</string>
    <string name="toast_invalid_credentials">Invalid username/password.</string>
    <string name="toast_username_already_taken">This username is already in use.</string>
    <string name="toast_session_ended">The session has ended. Please log in again.</string>
    <string name="toast_unexpected_error">An unexpected error has occured.</string>
    <string name="text_view_select_date">Select date...</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="card_view_malfunction_discovered_at">Discovered at:</string>
    <string name="card_view_malfunction_ongoing">Ongoing</string>
    <string name="card_view_malfunction_fixed">Fixed</string>
    <string name="km_short">km</string>
    <string name="lt_short">lt</string>
    <string name="button_delete">DELETE</string>
    <string name="loading">Loading...</string>
    <string name="text_view_title">Title:</string>
    <string name="text_view_description">Description:</string>
    <string name="text_view_at_km">Kilometers discovered at:</string>
    <string name="text_view_started">Date discovered at:</string>
    <string name="text_view_date_ended">Date fixed:</string>
    <string name="card_view_service_next_service">Next at:</string>
    <string name="text_view_service_at_km">Service mileage:</string>
    <string name="text_view_service_next_at">Next service mileage:</string>
    <string name="text_view_service_date_happened">Date happened:</string>
    <string name="text_view_location">Location:</string>
    <string name="title_hint">What\'s malfunctioning...?</string>
    <string name="description_hint">Write what happened...</string>
    <string name="service_at_km_hint">Service km.</string>
    <string name="text_view_select_location">Select Location...</string>
    <string name="button_select_location">SELECT LOCATION</string>
    <string name="malfunction_at_km_hint">km. discovered at</string>
    <string name="service_next_km_hint">Next service km.</string>
    <string name="button_add_service">ADD SERVICE</string>
    <string name="button_add_malfunction">ADD MALFUNCTION</string>
    <string name="button_confirm_location">SELECT LOCATION</string>
    <string name="toast_logged_in_as">"Logged in as: "</string>
    <string name="check_box_malfunction_fixed">I fixed this malfunction.</string>
    <string name="not_yet_supported">Not Supported Yet.</string>
    <string name="toast_please_select_date">Please select a date.</string>
    <string name="setting_dark_mode">Dark Mode</string>
    <string name="setting_language">Language</string>
    <string name="setting_logout">Logout</string>
    <string name="settings_general">General Settings</string>
    <string name="spinner_option_same_as_system">Same as system</string>
    <string name="tab_malfunctions">MALFUNCTIONS</string>
    <string name="tab_services">SERVICES</string>
    <string name="setting_fast_login">Fast Login</string>
    <string name="text_view_maps_hint">To select a location, long press on the map or type an address.</string>
    <string name="title_add_service">Add Service</string>
    <string name="title_add_malfunction">Add Malfunction</string>
    <string name="dialog_location_required">In order to use this feature, you will be asked to grant access to your location. Once you grant it, you may press the button again to pick an address or location in the map.</string>
    <string name="button_delete_location">DELETE LOCATION</string>
    <string name="dialog_select_new_location_confirm">By selecting a new location, you will discard the old one. Are you sure you want to do that?</string>
    <string name="dialog_location_deletion_confirmation">Are you sure you want to delete this location?</string>
    <string name="title_edit_service">Edit Service Data</string>
    <string name="title_edit_malfunction">Edit Malfunction Data</string>
    <string name="title_activity_maps_display_point">Display Point on Map</string>
    <string name="text_view_total_records">" total records."</string>
    <string name="text_view_one_record">Only one, singular, lonely record...</string>
    <string name="edit_text_repeated_trips_title_hint">Trip title (e.g. \"Home - School\" or \"Trip to Miami\")</string>
    <string name="edit_text_repeated_trips_times_occurring">Times occurring in the week:</string>
    <string name="edit_text_repeated_trips_times_occurring_hint">Times</string>
    <string name="check_box_repeated_trips_not_repeating">This is a one-time trip.</string>
    <string name="text_view_repeated_trips_trip_legend">Trip:</string>
    <string name="text_view_repeated_trips_destination_legend">Destination:</string>
    <string name="button_repeated_trips_select_trip">Tap to select origin...</string>
    <string name="button_repeated_trips_select_destination">Tap to select destination...</string>
    <string name="text_view_repeated_trips_km_legend">Trip\'s total kilometers:</string>
    <string name="title_add_trip">Add Trip</string>
    <string name="text_view_card_trips_one_time">One-time trip.</string>
    <string name="text_view_repeated_trips_lt_legend">Total liters consumed:</string>
    <string name="text_view_repeated_trips_cost_legend">Trip\'s total cost:</string>
    <string name="title_activity_maps_create_trip">Create Trip</string>
    <string name="card_repeated_trip_repeating">"Repeating "</string>
    <string name="card_repeated_trip_times_per_week">" times per week."</string>
    <string name="card_repeated_trip_per_week">" per week"</string>
    <string name="card_trip_km_trip">" trip"</string>
    <string name="title_activity_maps_display_trip">Display Trip</string>
    <string name="display_trip_cost">COST:</string>
    <string name="display_trip_consumption">CONSUMPTION:</string>
    <string name="display_trip_trip">Trip:</string>
    <string name="display_trip_from">From:</string>
    <string name="display_trip_to">To:</string>
    <string name="display_trip_show_on_map">SHOW ON MAP</string>
    <string name="repeated_trips_doesnt_repeat">Doesn\'t repeat.</string>
    <string name="dialog_location_mandatory">This feature requires the use of your location to work. Once you grant access, you can use it. If you\'re getting this message repeatedly without being asked for your location, you might want to grant access to your location through your device\'s settings.</string>
    <string name="per_time">" per time"</string>
    <string name="toast_no_addresses_found">No addresses found</string>
    <string name="toast_addresses_failed_to_load">Addresses failed to load</string>
    <string name="title_display_malfunction">Malfunction Data</string>
    <string name="title_display_service">Service Data</string>
    <string name="marker_origin">Loading origin...</string>
    <string name="marker_destination">Loading destination...</string>
    <string name="title_edit_trip">Edit Trip</string>
    <string name="title_select_location">Select Location</string>
    <string name="toast_trip_added_successfully">New trip added Successfully.</string>
    <string name="toast_trip_edit_successfully">Trip modified successfully</string>
    <string name="text_view_repeated_trips_trip">Make trip...</string>
    <string name="button_repeated_trips_make_trip">CREATE TRIP</string>
    <string name="service_info_label">Service Info:</string>
    <string name="button_remove_trip">REMOVE TRIP</string>
    <string name="trip_info">Trip Info:</string>
</resources>