<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_all_records"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_services"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/title_services" />

    <item
        android:id="@+id/navigation_repeated_trips"
        android:icon="@android:drawable/ic_popup_sync"
        android:title="@string/title_repeated_trips" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/title_notifications" />

</menu>