<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.georgemc2610.benzinapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_all_records"
        android:name="com.georgemc2610.benzinapp.ui.history.HistoryFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_services"
        android:name="com.georgemc2610.benzinapp.ui.services.ServicesFragment"
        android:label="@string/title_services"
        tools:layout="@layout/fragment_services" />

    <fragment
        android:id="@+id/navigation_repeated_trips"
        android:name="com.georgemc2610.benzinapp.ui.repeated_trips.RepeatedTripsFragment"
        android:label="@string/title_repeated_trips"
        tools:layout="@layout/fragment_repeated_trips" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.georgemc2610.benzinapp.ui.settings.SettingsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_settings" />


</navigation>