<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_add.ActivityAddRecord">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- TITLE -->
            <TextView
                android:id="@+id/textViewMalfunctionTitle"
                android:layout_width="match_parent"
                android:layout_height="19dp"
                android:fontFamily="sans-serif-black"
                style="@style/textColorSpecial"
                android:text="@string/text_view_title" />

            <EditText
                android:id="@+id/editTextMalfunctionTitle"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:ems="10"
                android:hint="@string/title_hint"
                android:inputType="text" />

            <!-- DESCRIPTION -->
            <TextView
                android:id="@+id/textViewMalfunctionDesc"
                android:layout_width="match_parent"
                android:layout_height="19dp"
                style="@style/textColorSpecial"
                android:fontFamily="sans-serif-black"
                android:text="@string/text_view_description" />

            <EditText
                android:id="@+id/editTextMalfunctionDesc"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:ems="10"
                android:hint="@string/description_hint"
                android:inputType="textMultiLine" />

            <!-- AT_KM -->
            <TextView
                android:id="@+id/textViewMalfunctionAtKm"
                android:layout_width="match_parent"
                android:layout_height="19dp"
                style="@style/textColorSpecial"
                android:fontFamily="sans-serif-black"
                android:text="@string/text_view_at_km" />

            <EditText
                android:id="@+id/editTextMalfunctionAtKm"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:ems="10"
                android:hint="@string/malfunction_at_km_hint"
                android:inputType="number" />

            <!-- DATE HAPPENED -->
            <TextView
                android:id="@+id/textViewMalfunctionDate"
                android:layout_width="match_parent"
                android:layout_height="19dp"
                android:fontFamily="sans-serif"
                style="@style/textColorSpecial"
                android:textStyle="bold"
                android:text="@string/text_view_datetime" />

            <TextView
                android:id="@+id/textViewMalfunctionDatePicked"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/text_view_select_date"
                style="@style/textColorSpecial"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonMalfunctionDate"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:ems="10"
                style="@style/buttonMainBackground"
                android:textAllCaps="false"
                android:text="@string/edit_text_datetime_hint"
                android:onClick="OnButtonPickDateClicked"
                app:icon="@android:drawable/ic_menu_day" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:onClick="OnButtonAddMalfunctionClicked"
                android:text="@string/button_add_malfunction"
                android:textAllCaps="false"
                style="@style/buttonMainBackground" />

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>