<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/edit_account_background_gradient"
    android:id="@+id/editTripLinearLayout"
    tools:context=".activity_edit.ActivityEditRepeatedTrip"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- REQUIRED INFO LABEL -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trip_info"
                android:layout_marginBottom="5dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_text_repeated_trips_title_hint"
                android:textColor="@color/black"
                android:textColorHint="#484848"
                android:textSize="15sp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/rounded_corner_field"
                android:padding="11dp"
                android:inputType="text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/times"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:hint="@string/text_view_cost"
                    android:textColor="@color/black"
                    android:textColorHint="#484848"
                    android:textSize="15sp"
                    android:layout_marginStart="1dp"
                    android:background="@drawable/rounded_corner_field"
                    android:padding="11dp"
                    android:inputType="numberDecimal" />

                <CheckBox
                    android:id="@+id/isRepeating"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/check_box_repeated_trips_not_repeating" />

            </LinearLayout>

            <!-- 'SELECT DATE' LABEL -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_view_repeated_trips_trip"
                android:layout_marginTop="25dp"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-black"
                android:textAlignment="center"
                android:id="@+id/tripText" />

            <!-- LINEAR LAYOUT FOR TWO BUTTONS -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal" >

                <!-- BUTTON PICK DATE -->
                <Button
                    android:id="@+id/tripButton"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_weight="1"
                    android:layout_marginEnd="2dp"
                    android:text="@string/button_repeated_trips_make_trip"
                    app:backgroundTint="#282828"
                    android:background="@drawable/rounded_button"
                    android:letterSpacing="0"
                    android:textSize="14sp" />

                <!-- BUTTON PICK DATE -->
                <Button
                    android:id="@+id/removeTripButton"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_weight="1"
                    android:layout_marginEnd="2dp"
                    android:text="@string/button_remove_trip"
                    app:backgroundTint="#A30000"
                    android:background="@drawable/rounded_button"
                    android:letterSpacing="0"
                    android:textSize="20sp" />

            </LinearLayout>

            <!-- TOTAL KM -->
            <TextView
                android:id="@+id/kmLegend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_view_repeated_trips_km_legend"
                android:layout_marginTop="15dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/km"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/loading"
                android:layout_marginTop="5dp"
                android:textStyle="bold" />


        </LinearLayout>

    </ScrollView>

    <!-- APPLY BUTTON -->
    <include
        layout="@layout/bottom_button_apply_edits" />

</LinearLayout>