<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/editServiceLinearLayout"
    style="@style/editBackground"
    android:orientation="vertical"
    tools:context=".activity_edit.ActivityEditService">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- KEYBOARD INPUT DATA -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/service_info_label"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:maxLength="4096"
                android:hint="@string/description_hint"
                android:textColor="@color/black"
                android:textColorHint="#484848"
                android:textSize="15sp"
                android:background="@drawable/rounded_corner_field"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:padding="11dp"
                android:inputType="textMultiLine"
                android:id="@+id/desc" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/cost"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:hint="@string/text_view_cost"
                    android:textColor="@color/black"
                    android:textColorHint="#484848"
                    android:textSize="15sp"
                    android:layout_marginStart="1dp"
                    android:background="@drawable/rounded_corner_field"
                    android:padding="11dp"
                    android:inputType="numberDecimal" />

                <EditText
                    android:id="@+id/atKm"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:hint="@string/service_at_km_hint"
                    android:textColor="@color/black"
                    android:textColorHint="#484848"
                    android:textSize="15sp"
                    android:layout_marginStart="1dp"
                    android:background="@drawable/rounded_corner_field"
                    android:padding="11dp"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/nextKm"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:hint="@string/service_next_km_hint"
                    android:textColor="@color/black"
                    android:textColorHint="#484848"
                    android:textSize="15sp"
                    android:layout_marginStart="1dp"
                    android:background="@drawable/rounded_corner_field"
                    android:padding="11dp"
                    android:inputType="number" />
            </LinearLayout>

            <!-- SELECT DATE -->
            <include
                layout="@layout/date_picker" />

            <!-- 'SELECT LOCATION' LABEL -->
            <include
                layout="@layout/location_picker" />

        </LinearLayout>

    </ScrollView>

    <!-- APPLY BUTTON -->
    <include
        layout="@layout/bottom_button_apply_edits" />

</LinearLayout>